# aethermap

./: .gitignore  .mcp.json  99-aethermap.rules  AGENTS.md  AZERON_SETUP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  MANUAL.md  PKGBUILD  QUALITY_AUDIT_REPORT.md  README.md  aethermap-gui.desktop  aethermap.install  aethermap.sysusers  aethermapd.service  build-package.sh  config.yaml.example  device_profiles.yaml  syncore.db  syncore.db_tasks  syncore.db_tasks-shm  syncore.db_tasks-wal  syncore_code_graph.db  vector.index.vectors  {
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.3-RESEARCH.md  v1.3-SUMMARY.md
.planning/phases/01-core-remapping/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-03b-PLAN.md  01-03b-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-device-profiles-ipc/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-hotplug-hotreload/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-integration-testing/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md
.planning/phases/09-device-detection-basic-input/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  09-06-PLAN.md  09-06-SUMMARY.md  09-07-PLAN.md  09-07-SUMMARY.md
.planning/phases/10-layer-system-state-management/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-06-PLAN.md  10-06-SUMMARY.md  10-07-PLAN.md  10-07-SUMMARY.md  10-08-PLAN.md  10-08-SUMMARY.md  10-layer-system-state-management-VERIFICATION.md
.planning/phases/11-analog-processing-and-calibration/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md  11-06-PLAN.md  11-06-SUMMARY.md  11-07-PLAN.md  11-07-SUMMARY.md  11-08-PLAN.md  11-08-SUMMARY.md  11-CONTEXT.md  11-VERIFICATION.md
.planning/phases/12-led-control/: 12-01-PLAN.md  12-02-PLAN.md  12-03-PLAN.md  12-04-PLAN.md
.planning/phases/13-wayland-portal-integration/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-04-SUMMARY.md  13-05-PLAN.md  13-05-SUMMARY.md  13-06-PLAN.md  13-06-SUMMARY.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/14-gamepad-emulation-mode/: 14-01-PLAN.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-04-SUMMARY.md  14-05-PLAN.md  14-05-SUMMARY.md  14-06-PLAN.md  14-06-SUMMARY.md  14-CONTEXT.md
.planning/phases/15-wasd-mouse-camera-modes/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-04-PLAN.md  15-04-SUMMARY.md  15-05-PLAN.md  15-05-SUMMARY.md  15-06-PLAN.md  15-06-SUMMARY.md  15-07-PLAN.md  15-07-SUMMARY.md  15-08-PLAN.md  15-08-SUMMARY.md  15-09-PLAN.md  15-09-SUMMARY.md  15-10-PLAN.md  15-10-SUMMARY.md  15-CONTEXT.md  15-RESEARCH.md  15-VERIFICATION.md
.planning/phases/16-calibration-gui/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-03-PLAN.md  16-03-SUMMARY.md  16-04-PLAN.md  16-04-SUMMARY.md  16-05-PLAN.md  16-05-SUMMARY.md  16-06-PLAN.md  16-06-SUMMARY.md  16-07-PLAN.md  16-07-SUMMARY.md  16-08-PLAN.md  16-08-SUMMARY.md  16-CONTEXT.md  16-RESEARCH.md
.planning/phases/17-hotkey-and-auto-switch-persistence/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md  17-03-SUMMARY.md  17-04-PLAN.md  17-04-SUMMARY.md  17-05-PLAN.md  17-05-SUMMARY.md  17-06-PLAN.md  17-06-SUMMARY.md  17-07-PLAN.md  17-07-SUMMARY.md  17-08-PLAN.md  17-08-SUMMARY.md  17-09-PLAN.md  17-09-SUMMARY.md  17-10-PLAN.md  17-10-SUMMARY.md  17-RESEARCH.md  17-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
aethermap-common/: Cargo.toml  README.md
aethermap-common/src/: ipc_client.rs  lib.rs
aethermap-gui/: Cargo.toml
aethermap-gui/src/: focus_tracker.rs  gui.rs  ipc.rs  lib.rs  main.rs  theme.rs
aethermap-gui/src/handlers/: analog.rs  auto_switch.rs  devices.rs  hotkeys.rs  layers.rs  led.rs  macros.rs  mod.rs
aethermap-gui/src/theme/: mod.rs  palette.rs  styles.rs
aethermap-gui/src/views/: analog.rs  auto_switch.rs  devices.rs  hotkeys.rs  keypad.rs  led.rs  macros.rs  mod.rs  profiles.rs  sidebar.rs  status_bar.rs
aethermap-gui/src/widgets/: analog_visualizer.rs  curve_graph.rs  mod.rs
aethermap-gui/tests/: gui_sanity.rs
aethermapd/: Cargo.toml
aethermapd/config/: default.yaml
aethermapd/src/: analog_calibration.rs  analog_processor.rs  analog_processor.rs.fixbak  analog_processor.rs.rej  auto_profile_switcher.rs  config.rs  device.rs  gamepad_device.rs  global_hotkey_manager.rs  hotplug.rs  injector.rs  ipc.rs  key_parser.rs  layer_manager.rs  led_controller.rs  lib.rs  macro_engine.rs  main.rs  remap_engine.rs  security.rs
aethermapd/systemd/: aethermapd.service
aethermapd/tests/: config_reload_test.rs  hotplug_test.rs  macro_integration_test.rs  remap_integration_test.rs
device_profiles/: azeron_cyborg2.yaml
docs/superpowers/plans/: 2025-11-16-adaptive-cosmic-theme.md  2026-04-17-human-speed-macros.md  (+2 more)
syncore.db_cache/: db  snap.0000000000001500
tests/: Cargo.toml  e2e.rs
(+4 files in other folders)
