[workspace]
members = ["aethermap-common", "aethermapd", "aethermap-gui", "tests"]
resolver = "2"

[workspace.package]
version = "1.4.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
tempfile = "3.0"
nix = "0.29"
