[workspace]
members = ["aethermap-common", "aethermapd", "aethermap-gui", "tests"]
resolver = "2"

[workspace.package]
version = "1.5.0"
edition = "2021"
authors = ["Aethermap Team"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/oldnordic/aethermap"
homepage = "https://github.com/oldnordic/aethermap"
keywords = ["input", "remapper", "macro", "linux", "evdev"]
categories = ["hardware-support", "command-line-utilities"]

[workspace.dependencies]
aethermap-common = { path = "aethermap-common", version = "1.5.0" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
tempfile = "3.0"
nix = "0.29"
