[package]
name = "aethermap-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GUI client for aethermap input remapper"

[lib]
name = "aethermap_gui"
path = "src/lib.rs"

[[bin]]
name = "aethermap-gui"
path = "src/main.rs"

[dependencies]
# GUI framework
iced = { version = "0.12", features = ["tokio", "svg", "canvas"] }

# Common types and IPC
aethermap-common = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Wayland portal integration
ashpd = { version = "0.8", default-features = false, features = ["wayland", "tokio"] }
