[package]
name = "aethermapd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Privileged system daemon for aethermap"

[dependencies]
aethermap-common = { workspace = true }

evdev = "0.12"
uinput-sys = "0.1"
serde_yaml = "0.9"
libc = "0.2"
nix = { version = "0.29", features = ["user", "ioctl", "fs"] }
udev = "0.9"
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
async-trait = "0.1"
hidapi = { version = "2.4", features = ["linux-static-hidraw"] }
thiserror = { workspace = true }
rand = "0.10.1"

[features]
default = []
token-auth = []

[package.metadata.deb]
maintainer = "Aethermap Team"
copyright = "2024, Aethermap Team"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/aethermapd", "usr/bin/", "755"],
    ["../aethermapd.service", "usr/lib/systemd/system/", "644"],
]
